@@ -98,6 +98,7 @@ sub MY::postamble {
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::OCSP_BASICRESP');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::OCSP_CERTID');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::OCSP_SINGLERESP');
+    $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Net::SSLeay::OCSP_ONEREQ');
   }
   
   return $make_rule;
