@@ -1,0 +1,34 @@
+package SPVM::Net::SSLeay::OCSP_ONEREQ;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::OCSP_ONEREQ - OCSP_ONEREQ Data Structure in OpenSSL.
+
+=head1 Description
+
+Net::SSLeay::OCSP_ONEREQ class in L<SPVM> represents L<OCSP_ONEREQ|https://docs.openssl.org/3.0/man3/OCSP_REQUEST_new/> data structure in OpenSSL.
+
+=head1 Usage
+
+  use Net::SSLeay::OCSP_ONEREQ;
+
+=head1 See Also
+
+=over 2
+
+=item * L<Net::SSLeay::OCSP|SPVM::Net::SSLeay::OCSP>
+
+=item * L<Net::SSLeay|SPVM::Net::SSLeay>
+
+=back
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
